Start to try to fix CSS for overflow in tables

--- a/src/containers/DataOutputModal/DataOutputModal.css
+++ b/src/containers/DataOutputModal/DataOutputModal.css
@@ -33,7 +33,5 @@
 
 .dataom-table-container {
   height: 85%;
-  /* overflow-x: scroll;
-  overflow-y: scroll; */
   width: 100%;
 }
