--- a/src/containers/DataOutputTable/DataOutputTable.css
+++ b/src/containers/DataOutputTable/DataOutputTable.css
@@ -17,9 +17,11 @@
   border-bottom: solid 1px #000;
   border-right: solid 1px #000;
   height: 38px;
+  width: 200px;
 }
 
 .table-key {
+  background-color: #fff;
   border-bottom: solid 1px #000;
   border-right: solid 1px #000;
   margin: 0;
