--- a/src/containers/Simulator/Simulator.css
+++ b/src/containers/Simulator/Simulator.css
@@ -73,8 +73,8 @@
 .modal-container {
   /* height: 80.5%; */
   /*Maybe try?*/
-  /* overflow-x: scroll;
-  overflow-y: scroll; */
+  overflow-x: scroll !important;
+  overflow-y: scroll !important;
   /* width: 82.35%; */
 }
 
